--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>La sintassi dell'html fa davvero cagare.</h1>
-        <p>Mi piacciono i piedi.</p>
-    </body>
+  <head>
+    <meta charset="UTF-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
+    <title>Aten's Portfolio</title>
+  </head>
+  <body>
+    <nav id="main-navbar">
+      <ul>
+        <li>
+          <a href="#welcome-section">Home</a>
+        </li>
+        <li>
+          <a href="#profile-link">My Socials</a>
+        </li>
+      </ul>
+    </nav>
+    <section id="welcome-section">
+      <h1>Hi, I'm Aten!</h1>
+      <p>a software engineering student</p>
+    </section>
+    <section id="projects">
+      <div id="first-project" class="project-tile">
+        <img id="first-image">
+        <figcaption id="img-caption"><a>NesBoy Save Converter</a></figcaption>
+      </div>
+    </section>
+    <section id="profile-section">
+      <a id="profile-link" href="https://github.com/Tomassone" target="_blank">My GitHub Page</a>
+    </section>
+  </body> 
 </html>
