--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
           <a href="#welcome-section">Home</a>
         </li>
         <li>
-          <a href="#profile-link">My Socials</a>
+          <a href="#projects">Projects</a>
+        </li>
+        <li>
+          <a href="#profile-link">Socials</a>
         </li>
       </ul>
     </nav>
@@ -22,13 +25,16 @@
       <p>a software engineering student</p>
     </section>
     <section id="projects">
+      <p>Projects: </p>
       <div id="first-project" class="project-tile">
-        <img id="first-image">
-        <figcaption id="img-caption"><a>NesBoy Save Converter</a></figcaption>
+        <img id="first-image" src="prg-covers\1prj.jpg">
+        <figcaption id="img-caption"><a href="https://github.com/Tomassone/NesBoy-Save-Converter">NesBoy Save Converter</a></figcaption>
       </div>
     </section>
     <section id="profile-section">
-      <a id="profile-link" href="https://github.com/Tomassone" target="_blank">My GitHub Page</a>
+      <p>Socials: </p>
+      <a id="profile-link1" href="https://github.com/Tomassone" target="_blank">GitHub Page</a>
+      <a id="profile-link2" href="https://www.youtube.com/@aten8672" target="_blank">YouTube</a>
     </section>
   </body> 
 </html>
