Aggiustamento di 4 cagate

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <p>a software engineering student</p>
     </section>
     <section id="projects">
-      <p>Projects: </p>
+      <p class="sec-title">Projects: </p>
       <div id="first-project" class="project-tile">
         <img id="first-image" src="prg-covers\1prj.jpg">
         <figcaption id="img-caption"><a href="https://github.com/Tomassone/NesBoy-Save-Converter">NesBoy Save Converter</a></figcaption>
       </div>
     </section>
     <section id="profile-section">
-      <p>Socials: </p>
+      <p class="sec-title">Socials: </p>
       <a id="profile-link1" href="https://github.com/Tomassone" target="_blank">GitHub Page</a>
       <a id="profile-link2" href="https://www.youtube.com/@aten8672" target="_blank">YouTube</a>
     </section>
