--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a href="#projects">Projects</a>
         </li>
         <li>
-          <a href="#profile-link">Socials</a>
+          <a href="#profile-section">Socials</a>
         </li>
       </ul>
     </nav>
