--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a href="#welcome-section">Home</a>
         </li>
         <li>
-          <a href="#projects">Projects</a>
+          <a href="#projects">Main projects</a>
         </li>
         <li>
           <a href="#profile-section">Socials</a>
