Miglioramenti sezione progetti

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <nav id="main-navbar">
       <ul>
         <li>
-          <a href="#welcome-section">Home</a>
+          <a class="nav-sec" href="#welcome-section">Home</a>
         </li>
         <li>
-          <a href="#projects">Projects</a>
+          <a class="nav-sec" href="#projects">Projects</a>
         </li>
         <li>
-          <a href="#profile-section">Socials</a>
+          <a class="nav-sec" href="#profile-section">Socials</a>
         </li>
       </ul>
     </nav>
@@ -27,7 +27,7 @@
     <section id="projects">
       <p class="sec-title">Projects: </p>
       <div id="first-project" class="project-tile">
-        <img id="first-image" src="prg-covers\1prj.jpg">
+        <img id="first-image" class="project-img" src="prg-covers\1prj.jpg">
         <figcaption id="img-caption"><a href="https://github.com/Tomassone/NesBoy-Save-Converter">NesBoy Save Converter</a></figcaption>
       </div>
     </section>
