Aggiunto secondo progetto + layout migliore

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <img id="first-image" class="project-img" src="prg-covers\1prj.jpg">
         <figcaption id="img-caption"><a href="https://github.com/Tomassone/NesBoy-Save-Converter">NesBoy Save Converter</a></figcaption>
       </div>
+      <div id="second-project" class="project-tile">
+        <img id="second-image" class="project-img" src="prg-covers\2prj.jpg">
+        <figcaption id="img-caption"><a href="https://cedi-alla-vanita-di-diletta-farinelli.github.io/">Hair Salon Website</a></figcaption>
+      </div>
     </section>
     <section id="profile-section">
       <p class="sec-title">Socials: </p>
