--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <img id="second-image" class="project-img" src="prg-covers\2prj.jpg">
         <figcaption id="img-caption"><a href="https://cedi-alla-vanita-di-diletta-farinelli.github.io/">Hair Salon Website</a></figcaption>
       </div>
+      <div id="third-project" class="project-tile">
+        <img id="third-image" class="project-img" src="prg-covers\3prj.jpg">
+        <figcaption id="img-caption"><a href="https://www.amazon.it/dp/B0DBMX2CMS">Typesetting Work</a></figcaption>
+      </div>
     </section>
     <section id="profile-section">
       <p class="sec-title">Socials: </p>
