--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <p class="sec-title">Socials: </p>
       <a id="profile-link1" href="https://github.com/Tomassone" target="_blank">GitHub Page</a>
       <a id="profile-link2" href="https://www.youtube.com/@aten8672" target="_blank">YouTube</a>
+      <a id="profile-link3" href="https://www.linkedin.com/in/cesare-tomasi-13410a307/" target="_blank">LinkedIn</a>
     </section>
   </body> 
 </html>
